clusters/bale/default/heimdall.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: heimdall
  namespace: default
  labels:
    app: heimdall
spec:
  replicas: 1
  selector:
    matchLabels:
      app: heimdall
  template:
    metadata:
      labels:
        app: heimdall
    spec:
      containers:
        - name: heimdall
          image: lscr.io/linuxserver/heimdall:2.6.3
          ports:
            - containerPort: 80
          volumeMounts:
            - name: heimdall
              mountPath: /config
      volumes:
        - name: heimdall
          persistentVolumeClaim:
            claimName: heimdall
---
apiVersion: v1
kind: Service
metadata:
  name: heimdall
  namespace: default
spec:
  selector:
    app: heimdall
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: heimdall
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    - host: heimdall.k8s.lan
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: heimdall
                port:
                  number: 80
    # - host: heimdall.etheredge.dev
    #   http:
    #     paths:
    #       - path: /
    #         pathType: Prefix
    #         backend:
    #           service:
    #             name: heimdall
    #             port:
    #               number: 80
